--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@
 buildscript {
     ext {
         kotlin_version = '1.4.10'
+        navigationVersion = "2.3.5"
         archLifecycleVersion = '1.1.1'
         gradleVersion = '4.1.0'
         supportlibVersion = '1.2.0'
