--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'androidx.navigation.safeargs'
+
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
